# beck_stuff

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/base/: cli.py  photon_logic.py  qubit_logic.py
src/beck_stuff.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
