[project]
name = "beck_stuff"
version = "0.1.0"
description = "A module for beck_stuff"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mypy>=1.16.1",
    "numpy>=2.2.6",
    "ruff>=0.12.3",
]

[tool.uv]

[tool.ruff]
src = ["src"]
line-length = 100
exclude = ["tests/fixtures", "pdfs"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
strict = true
namespace_packages = true
files = "src/qpv"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

